--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A MIDI sequencer for Node and Web",
   "main": "build/index.js",
   "scripts": {
+    "start": "ts-node ./src/cli/index.ts",
     "build": "tsc",
     "test": "tsc && ava --verbose"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^14.0.1",
     "ava": "^3.8.2",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
 }
